--- a/pages/w/[id].scss
+++ b/pages/w/[id].scss
@@ -39,7 +39,10 @@
       display: flex;
       flex-direction: column;
       #header-ln{
-
+        background-color: #ededed;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding: 10px;
       }
       .wr-hei-note{
         flex: 1;
@@ -48,10 +51,29 @@
         flex-direction: column;
         overflow: scroll;
         .list-note{
+          .active{
+            background-color: #ade5cd;
+          }
           .note-c{
-            display: block;
+            display: flex;
+            flex-direction: row;
             min-height: 69px;
             border-top: 1px solid #c0c0c0;
+            padding-top: 2px;
+            padding-left: 2px;
+            font-size: 14px;
+            .text{
+              padding: 2px;
+              width: 122px;
+            }
+            .image-s{
+              width: 50px;
+              height: 20px;
+              img{
+                width: 100px;
+                height: 63px;
+              }
+            }
           }
         }
       }
