https://trello.com/c/oPcjvlV5/20-khi-paste-code-b%E1%BB%8B-%C4%91%C3%A8-lu%C3%B4n-d%C3%B2ng hightlight code tab on backward

--- a/pages/w/[id].scss
+++ b/pages/w/[id].scss
@@ -68,7 +68,7 @@ main .sidebar-note {
     display: flex;
     flex-direction: column;
     #header-ln{
-      background-color: #fff0cb;
+      background-color: #fffcf5;
       margin-top: 0px;
       margin-bottom: 0px;
       padding: 10px;
@@ -90,7 +90,7 @@ main .sidebar-note {
           display: flex;
           flex-direction: row;
           min-height: 69px;
-          border-top: 1px solid #c0c0c0;
+          border-bottom: 1px solid #c0c0c0;
           padding-top: 2px;
           padding-left: 2px;
           font-size: 14px;
