--- a/pages/w/[id].scss
+++ b/pages/w/[id].scss
@@ -16,6 +16,31 @@
     color: white;
     font-weight: bold;
   }
+  .auth{
+    display: flex;
+    flex-direction: row;
+    #avatar{
+      img{
+        width: 30px;
+        height: 30px;
+      }
+    }
+    #name-auth{
+      font-size: 12px;
+      padding: 5px;
+    }
+    #btn-login{
+      align-self: center;
+      border-radius: 3px;
+      margin: 0px 5px;
+      padding: 5px 12px;
+      background-color: #80b59e;
+      font-weight: bold;
+      color: white;
+      cursor: pointer;
+    }
+  }
+
   #con-r{
     #btn-d-no{
       align-self: center;
@@ -100,8 +125,8 @@ main .sidebar-note {
             width: 50px;
             height: 20px;
             img{
-              width: 100px;
-              height: 63px;
+              max-width: 100px;
+              max-height: 63px;
             }
           }
         }
