[Fix] syntax highlight, change screen attach format code

--- a/pages/w/[id].scss
+++ b/pages/w/[id].scss
@@ -175,6 +175,10 @@ main .main-note {
             max-width: 100%;
             height: auto;
           }
+          pre.ql-syntax{
+            background-color: #fbfbfb;
+            color: black;
+          }
         }
       }
     }
