[fix]deployer, and style

--- a/pages/w/[id].scss
+++ b/pages/w/[id].scss
@@ -122,6 +122,7 @@ main {
 
       .list-note{
         .ul-note{
+          padding-left: 25px;
           .active{
             font-weight: bold;
           }
