--- a/pages/w/[id].scss
+++ b/pages/w/[id].scss
@@ -176,26 +176,25 @@ main .main-note {
         }
       }
     }
-    .slate-editor{
-      width: 100%;
+    .quill {
       height: 100%;
-      flex: 1;
-      overflow-y: scroll;
-      [data-slate-node='element'] {
-        margin-top: 5px;
-        margin-bottom: 5px;
-      }
-      code{
-        font-size: 15px;
-        span{
-          background-color: #f1f1f1;
-          white-space: pre-wrap;
-          padding: 12px;
-          display: block;
+      display: flex;
+      flex-direction: column;
+      .ql-container{
+        height: 100%;
+        overflow-y: scroll;
+        font-size: 16px;
+        .ql-editor{
+          img{
+            max-width: 100%;
+            height: auto;
+          }
+          pre.ql-syntax{
+            background-color: #fbfbfb;
+            color: black;
+            border: 1px solid #C0C0C0;
+          }
         }
-      }
-      table, tr, td, th {
-        border: 1px solid #C0C0C0;
       }
     }
   }
